# Scientific_computing_EPFL

./: .gitignore  CMakeLists.txt
exercise_pdfs/: toto.txt
exercise_pdfs/exo-gdb-sources/: alloc.cc  fpe.cc
lectures/advanced_features-codes/: auto.cpp  for_each.cpp  lambda_loop.cpp  vec_loop.cpp
lectures/blocks-function-references-codes/: function_array_input2.cpp  function_pointer.cpp  return_array.cpp  return_matrix.cpp
lectures/blocks-functions-references-codes/: block_scope.cpp  block_scope2.cpp  calculate_minimum.cpp  calculate_minimum.hpp  function_array_input.cpp  namespace.cpp  (+5 more)
lectures/code-snippet-advanced_cmake/: CMakeLists.txt  Doxyfile  main.cpp  super_cool_class.hh  test.txt
lectures/code-snippet-advanced_cmake/html/: annotated.html  class_super_cool_class-members.html  class_super_cool_class.html  class_super_cool_class2-members.html  class_super_cool_class2.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  main_8cpp.html  main_8cpp_source.html  struct_vector-members.html  struct_vector.html  super__cool__class_8hh.html  super__cool__class_8hh_source.html
lectures/code-snippet-advanced_cmake/html/search/: all_0.js  all_2.js  all_3.js  classes_0.js  files_1.js  searchdata.js  variables_0.js
lectures/code-snippet-advanced_cmake/latex/: annotated.tex  class_super_cool_class.tex  class_super_cool_class2.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex  struct_vector.tex  super__cool__class_8hh.tex
solutions/: .gitignore  CMakeLists.txt
work/: CMakeLists.txt  exercise-template.cpp
(+103 files in other folders)
